[package]
name = "compio-wt"
version = "0.1.0"
edition = "2021"
description = "WebTransport for compio-quic — server-side HTTP/3 CONNECT handshake"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SakuraCapital/compio-wt"
authors = ["SakuraCapital"]
keywords = ["webtransport", "quic", "http3", "compio"]
categories = ["network-programming", "web-programming"]

[dependencies]
bytes = "1"
http = "1"
url = "2"
tracing = "0.1"
thiserror = "2"
futures = "0.3"

compio-quic = { version = "0.8.0", features = ["webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pki-types = "1"
web-transport-proto = "0.6"
web-transport-trait = "0.3"
